Fix tutorials image position on mobile

--- a/_assets/stylesheets/_layout.scss
+++ b/_assets/stylesheets/_layout.scss
@@ -284,6 +284,11 @@
       height: 100px;
       border: 1px solid #c8deeb;
       opacity: 0.8;
+
+      @include media-query($on-palm) {
+        display: block;
+        margin: 0 auto;
+      }
     }
     &:hover {
       background-color: $grey-color-lightest;
@@ -301,7 +306,7 @@
       margin-left: 20px;
       display: inline-block;
 
-      @include media-query($on-laptop) {
+      @include media-query($on-palm) {
         position: inherit;
         max-height: inherit;
         display: inherit;
